[Mac/GN] Treat create_bundle as a leaf for `gn desc runtime_deps`.

BUG=611414
R=brettw@chromium.org,dpranke@chromium.org,sdefresne@chromium.org

Review-Url: https://codereview.chromium.org/1982463002
Cr-Commit-Position: refs/heads/master@{#394840}

Former-commit-id: 903e2b85c71675f83767ac9b1687087382b49f39